# grimoirelab-perceval-mozilla

./: .travis.yml  AUTHORS  NEWS  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  tests.yml
perceval/: __init__.py
perceval/backends/mozilla/: _version.py  crates.py  kitsune.py  mozillaclub.py  remo.py
releases/: 0.3.0.md  0.3.1.md  0.3.10.md  0.3.11-rc.1.md  0.3.11.md  0.3.12-rc.1.md  0.3.12.md  0.3.13-rc.1.md  0.3.13.md  0.3.14-rc.1.md  0.3.14.md  0.3.15-rc.1.md  0.3.15.md  0.3.16-rc.1.md  0.3.16-rc.2.md  0.3.16.md  0.3.17-rc.1.md  0.3.17.md  0.3.18-rc.1.md  0.3.18.md  0.3.19-rc.2.md  0.3.19.md  0.3.2-rc.1.md  0.3.2-rc.10.md  0.3.2-rc.11.md  0.3.2-rc.2.md  0.3.2-rc.3.md  0.3.2-rc.4.md  0.3.2-rc.5.md  0.3.2-rc.6.md  0.3.2-rc.7.md  0.3.2-rc.8.md  0.3.2-rc.9.md  0.3.2.md  0.3.20-rc.1.md  0.3.20.md  0.3.21-rc.1.md  0.3.21.md  0.3.22-rc.1.md  0.3.22.md  (+88 more)
releases/unreleased/: blacklist-feature-to-kitsune-backend.yml  handle-kitsune-server-errors.yml  kitsune-rate-limit-interval.yml  kitsune-resuming-feature-fixed.yml  retry-kitsune-when-rate-limited.yml
tests/: base.py  run_tests.py  test_crates.py  test_kitsune.py  test_mozillaclub.py  test_remo.py
tests/data/crates/: crate_example_1  crate_example_2  crate_example_3  crate_example_4  crate_owner_team_1  crate_owner_team_2  crate_owner_team_3  crate_owner_team_4  crate_owner_user_1  crate_owner_user_2  crate_owner_user_3  crate_owner_user_4  crate_version_downloads_1  crate_versions_1  crate_versions_2  crate_versions_3  crate_versions_4  crates_page_1  crates_page_2  crates_page_empty  crates_summary
tests/data/mozillaclub/: feed.json
