[tool.poetry]
name = "perceval-mozilla"
version = "0.3.2-rc.1"
description = "Bundle of Perceval backends for Mozilla ecosystem."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-perceval-mozilla"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "perceval" },
    { include = "tests", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-perceval-mozilla/issues"

[tool.poetry.dependencies]
python = "^3.7"

requests = "^2.7.0"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
perceval = { version = ">=0.19", allow-prereleases = true }

[tool.poetry.dev-dependencies]
httpretty = "1.0.2"
flake8 = "^3.9.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
