[tool.poetry]
name = "perceval-mozilla"
version = "1.1.2"
description = "Bundle of Perceval backends for Mozilla ecosystem."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-perceval-mozilla"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "perceval" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-perceval-mozilla/issues"

[tool.poetry.dependencies]
python = "^3.9"

requests = "^2.7.0"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
perceval = { version = ">=0.19", allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
httpretty = "^1.1.4"
flake8 = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
